--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ gfx_glyph = "*"
 glutin = "*"
 
 lyon = "*"
-euclid = "^0.15.1"
+euclid = "^0.17.2"
 
 lyon_tessellation = "*"
 lyon_path = "*"
@@ -29,5 +29,23 @@ lyon_core = "*"
 log = "*"
 env_logger = "*"
 
-[patch.crates-io]
-gfx_glyph = { path = '../gfx-glyph' }
+lazy_static = "*"
+lru-cache = "*"
+app_units = "*"
+base64 = "*"
+
+[dependencies.pathfinder_font_renderer]
+git = "https://github.com/pcwalton/pathfinder"
+
+[dependencies.pathfinder_gfx_utils]
+git = "https://github.com/pcwalton/pathfinder"
+
+[dependencies.pathfinder_partitioner]
+
+git = "https://github.com/pcwalton/pathfinder"
+
+[dependencies.pathfinder_path_utils]
+git = "https://github.com/pcwalton/pathfinder"
+
+[dependencies.fontsan]
+git = "https://github.com/servo/fontsan.git"
