The binary compiles and runs again + No schema is drawn yet (events are not emitted yet) + Some drawing parts of the binary still need to be relocated into the new Actor based system + Structs should not have so many `pub` attributes + Remove old files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ name = "copper"
 path = "src/lib/main.rs"
 
 [[bin]]
-name = "schema_renderer"
+name = "schema_editor"
 path = "src/bin/main.rs"
 
 [dependencies]
@@ -46,6 +46,8 @@ epoxy = "*"
 shared_library = "*"
 
 bitflags = "*"
+
+uuid = { version = "0.6.5", features = ["v4"] }
 
 [dependencies.gtk]
 version = "*"
