--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ bitflags = "*"
 
 uuid = { version = "0.6.5", features = ["v4"] }
 
+owning_ref = "0.3"
+
 [dependencies.gtk]
 version = "*"
 features = ["v3_16"]
